# grandmas_house

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
authentication/: forms.py
conflicts/: apps.py
estate_config/: asgi.py  settings.py  urls.py  wsgi.py
estate_item/: apps.py
